atlassian/crowd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowd
spec:
  type: NodePort
  selector:
    app: crowd
  ports:
    - name: http
      port: 8095
      targetPort: 8095
