atlassian/crowd/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: crowd
spec:
  ingressClassName: traefik
  rules:
    - host: crowd.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crowd
                port:
                  number: 8095
